[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apache-flink>=2.1.0",
    "crc32c>=2.7.1",
    "cython>=3.1.4",
    "pip>=25.2",
    "python-snappy>=0.7.3",
    "scikit-learn>=1.6.1",
    "watchdog>=6.0.0",
]
